# G4SOLAr

./: .gitignore  .gitmodules  LICENSE  README.md  README_EXTERNALS.md  README_GENERATORS.md  setup_g4solar.sh
G4SOLAr/: CMakeLists.txt  SLArUserPath.hh.in  geometry.json  geometry_full.json  single_cr.mac  solar_sim.cc  vis.mac
G4SOLAr/assets/background/: cavern_rock_neutrons.json  cavern_shotcrete_neutrons.json  dune_cavern_neutrons_neucbot.root  external_neutrons.json  neutron_rates_20240313.root  test_bkg.json  test_externals.json  txt2hist.C
G4SOLAr/assets/geometry/: geometry.json  msolar_cryostat.json  msolar_cryostat_b_bricks.json  msolar_cryostat_bare.json  msolar_cryostat_bpoly.json  msolar_geometry.json  msolar_hd.json  msolar_pds_hd.json  msolar_tpc_hd.json  msolarvd_geometry.json  protodune_geometry.json  solaire.json  solaire_cryostat_bare.json  solaire_run.json  solaire_tpc.json  solar_fd_cryostat.json  solar_fd_tpc_vd.json  solar_fd_vd.json  solar_fd_vd_pds.json  tile_bern_v2.json  tile_bern_v2_full_pixel.json  tile_bern_v2_full_pixel_unitcell4x4.json  tile_full_sipm.json  tile_full_sipm_fd.json
G4SOLAr/assets/macros/: Ar42.mac  ArBackground_config.json  b8_cc_nue.mac  b8_es_nue.mac  cavernRock_config.json  cavernShotcrete_config.json  corsika_config.json  corsika_master.mac  cry_config.json  electrons.mac  electrons_backtracker.mac  external_neutrons.mac  generator_test.json  genie.mac  genie_config.json  genie_master.mac  marley_config.json  particleBomb_config.json  particleGun_config.json  radsrc_config.json  test_generator.mac  vis.mac  void_generator.mac  vrml_export.mac
G4SOLAr/assets/marley_cfg/: b8_osc_spect_CC_nue.js  b8_osc_spect_ES_nue.js  b8_osc_spect_ES_numu.js  b8_oscillated_file.root  hep_osc_spect_CC_nue.js  hep_osc_spect_ES_nue.js  hep_osc_spect_ES_numu.js  mono_nue_ES.js
G4SOLAr/assets/materials/: materials_db.json  materials_db_lar_rs_0_9.json  rootlogon.C  solar_root_styles.C
G4SOLAr/cmake/: G4SOLArConfig.cmake.in
G4SOLAr/include/: SLArActionInitialization.hh  SLArAnalysis.hh  SLArAnalysisManager.hh  SLArAnalysisManagerMsgr.hh  SLArBackgroundGeneratorAction.hh  SLArBacktracker.hh  SLArBacktrackerManager.hh  SLArBaseGenerator.hh  SLArBoxSurfaceVertexGenerator.hh  SLArBulkVertexGenerator.hh  SLArCorsikaGeneratorAction.hh  SLArDecay0GeneratorAction.hh  SLArDecay0GeneratorMessenger.hh  SLArDetectorConstruction.hh  SLArEventAction.hh  SLArExternalGeneratorAction.hh  SLArExtraPhysics.hh  SLArGENIEGeneratorAction.hh  SLArGenieGeneratorAction.hh  SLArMarleyGen.hh  SLArMarleyGeneratorAction.hh  SLArOpticalPhysics.hh  SLArPBombGeneratorAction.hh  SLArPGunGeneratorAction.hh  SLArPhysicsList.hh  SLArPhysicsListMessenger.hh  SLArPrimaryGeneratorAction.hh  SLArPrimaryGeneratorMessenger.hh  SLArRandomExtra.hh  SLArRun.hh  SLArRunAction.hh  SLArStackingAction.hh  SLArStepMax.hh  SLArSteppingAction.hh  SLArSteppingVerbose.hh  SLArTrackingAction.hh  SLArTrajectory.hh  SLArUnit.hpp  SLArUserPath.hh  SLArUserPhotonTrackInformation.hh  (+3 more)
G4SOLAr/include/config/: SLArCfgAnode.hh  SLArCfgAssembly.hh  SLArCfgBaseModule.hh  SLArCfgBaseSystem.hh  SLArCfgMegaTile.hh  SLArCfgReadoutTile.hh  SLArCfgSuperCell.hh  SLArCfgSuperCellArray.hh  SLArCfgSystemPix.hh  SLArPDSystemConfig.hh  SLArPDSystemConfigLinkDef.h  SLArReadoutSystemConfigLinkDef.h
G4SOLAr/include/cry/: SLArCRYGeneratorAction.hh
G4SOLAr/include/detector/: SLArBaseDetModule.hh  SLArDetectorSize.hh  SLArGeoInfo.hh  SLArGeoUtils.hh  SLArGeoUtils.hpp  (+1 more)
G4SOLAr/macros/: Ar42.mac  b8_cc_nue.mac  b8_es_nue.mac  electrons.mac  vis.mac
G4SOLAr/marley_cfg/: b8_osc_spect_CC_nue.js  b8_osc_spect_ES_nue.js  b8_osc_spect_ES_numu.js  hep_osc_spect_CC_nue.js  hep_osc_spect_ES_nue.js  hep_osc_spect_ES_numu.js  hep_oscillated_file.root  mono_nue_CC.js  mono_nue_ES.js
G4SOLAr/materials/: Air.json  LAr.json  PCB.json  PlotMaterialProperties.C  Silicon.json  Steel.json  Vacuum.json  Water.json  material_tables.json  materials_db.json
G4SOLAr/src/: SLArActionInitialization.cc  SLArAnalysisManager.cc  SLArAnalysisManagerMsgr.cc  SLArBackgroundGeneratorAction.cc  SLArBacktracker.cc  SLArBacktrackerManager.cc  SLArBaseGenerator.cc  SLArBoxSurfaceVertexGenerator.cc  SLArBulkVertexGenerator.cc  SLArCorsikaGeneratorAction.cc  SLArDecay0GeneratorAction.cc  SLArDecay0GeneratorMessenger.cc  SLArDetectorConstruction.cc  SLArEventAction.cc  SLArExternalGeneratorAction.cc  SLArExtraPhysics.cc  SLArGENIEGeneratorAction.cc  SLArGenieGeneratorAction.cc  SLArMarleyGen.cc  SLArMarleyGeneratorAction.cc  SLArOpticalPhysics.cc  SLArPBombGeneratorAction.cc  SLArPGunGeneratorAction.cc  SLArPhysicsList.cc  SLArPhysicsListMessenger.cc  SLArPrimaryGeneratorAction.cc  SLArPrimaryGeneratorMessenger.cc  SLArRandomExtra.cc  SLArRun.cc  SLArRunAction.cc  SLArStackingAction.cc  SLArStepMax.cc  SLArSteppingAction.cc  SLArSteppingVerbose.cc  SLArTrackingAction.cc  SLArTrajectory.cc  SLArUserPhotonTrackInformation.cc  SLArUserTrackInformation.cc
SOLAIREUtils/: CMakeLists.txt
SOLAIREUtils/data/: ER_ly_0V.csv  ER_ly_600V.csv
SOLAIREUtils/source/: rootlogon.C.in
SOLArAnalysis/: CMakeLists.txt  build_vis_map.C  build_vis_map.cc  electron_analysis.cc  event_display_test.C  event_processing_test.cc  ext_neutrons.C  gdml_viewer.C  multiple_scattering_analysis.cc  radiological.C  refactor_test_sc.C  solar_root_style.hpp  test_output.C  test_output.cc
SOLArAnalysis/VisMap/: CMakeLists.txt  SLArLightPropagationModel.cpp  SLArLightPropagationModel.h  SLArLightPropagationPars.h
SOLArAnalysis/g4solar/: CMakeLists.txt
SOLArAnalysis/include/: SLArQCluster.hh  SLArQConstants.h  SLArQDiffusion.hh  SLArQDiffusionLinkDef.h  SLArQEvReco.hh  SLArQEvRecoLinkDef.h  SLArQReadout.hh  SLArQReadoutLinkDef.h  rootlogon.C.in
SOLArAnalysis/macros/: CMakeLists.txt  process_events.cpp  view_files.C  view_results.C
SOLArAnalysis/source/: SLArAnalysisLibSetup.hpp.in  rootlogon.C.in  setup_g4s_analysis.sh.in
SOLArAnalysis/src/: CMakeLists.txt  SLArQCluster.cc  SLArQDiffusion.cc  SLArQEvReco.cc  SLArQReadout.cc
SOLArUtils/source/: CMakeLists.txt  rootlogon.C.in
(+213 files in other folders)
